--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 		<style>canvas { width: 100%; height: 100% }</style>
 	</head>
 	<body>
-		<script src="js/three.min.js"></script>
+		<script src="vendor/threejs-build/three.min.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
