--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<script src="vendor/threejs-build/three.min.js"></script>
+		<script src="vendor/stats.js/js/stats.min.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
