--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,13 @@
 		<style>canvas { width: 100%; height: 100% }</style>
 	</head>
 	<body>
+    <div id='container' style="width: 100%; height: 600px"></div>
 		<script src="vendor/threejs-build/three.min.js"></script>
 		<script src="vendor/stats.js/js/stats.min.js"></script>
+		<script src="vendor/underscore/underscore.js"></script>
 		<script src="js/app.js"></script>
+		<script>
+      new TerrainViewer(document.getElementById('container'));
+    </script>
 	</body>
 </html>
