--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
 		<style>canvas { width: 100%; height: 100% }</style>
 	</head>
 	<body>
-		<script src="vendor/threejs-build/three.min.js"></script>
-		<script src="vendor/stats.js/js/stats.min.js"></script>
+		<script src="vendor/threejs-build/build/three.min.js"></script>
+		<script src="vendor/stats.js/build/stats.min.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
