カーソルとカメラの水平移動を追加

--- a/app/index.html
+++ b/app/index.html
@@ -16,26 +16,35 @@
       tv.setTerrain(
         '/images/texture.jpg', 2000, 2000);
       tv.setCoordGrid([
-        0, 0, 10, 10, 10, 10, 10, 10, 10, 0,
-        0, 0, 10, 10, 10, 20, 20, 10, 10, 0,
-        0, 0, 10, 10, 20, 20, 20, 10, 10, 0,
-        0, 0, 10, 20, 30, 30, 20, 10, 10, 0,
-        0, 0, 10, 20, 30, 30, 20, 10, 10, 0,
-        0, 0, 10, 20, 30, 30, 30, 20, 10, 0,
-        0, 0, 10, 20, 20, 20, 30, 20, 10, 0,
-        0, 0, 10, 20, 10, 20, 20, 10, 10, 0,
-        0, 0, 10, 10, 10, 20, 20, 10, 10, 0,
-        0, 0, 10, 10, 10, 20, 20, 10, 10, 0
+        0, 0, 100, 100, 100, 100, 100, 100, 100, 0,
+        0, 0, 100, 100, 100, 200, 200, 100, 100, 0,
+        0, 0, 100, 100, 200, 200, 200, 100, 100, 0,
+        0, 0, 100, 200, 300, 300, 200, 100, 100, 0,
+        0, 0, 100, 200, 300, 300, 200, 100, 100, 0,
+        0, 0, 100, 200, 300, 300, 300, 200, 100, 0,
+        0, 0, 100, 200, 200, 200, 300, 200, 100, 0,
+        0, 0, 100, 200, 100, 200, 200, 100, 100, 0,
+        0, 0, 100, 100, 100, 200, 200, 100, 100, 0,
+        0, 0, 100, 100, 100, 200, 200, 100, 100, 0
         ], 10, 10);
       tv.setCenter(35.392626649, 139.241986328);
-      tv.setRoute([
-        {lat: 35.392626649, lon: 139.241986328, elev: 40},
-        {lat: 35.393626649, lon: 139.241986328, elev: 50},
-        {lat: 35.400626649, lon: 139.252986328, elev: 60},
-        {lat: 35.403626649, lon: 139.263986328, elev: 30}
-      ]);
+      var route = [
+        {lat: 35.392626649, lon: 139.241986328, elev: 400},
+        {lat: 35.393626649, lon: 139.241986328, elev: 500},
+        {lat: 35.400626649, lon: 139.252986328, elev: 600},
+        {lat: 35.403626649, lon: 139.263986328, elev: 300}
+      ];
+      tv.setRoute(route);
 
       tv.setup();
+      tv.setCursorPosition(35.392626649, 139.241986328, 400);
+      var i = 0;
+      setInterval(function() {
+        i++;
+        i = i % route.length;
+        var pos = route[i];
+        tv.setCursorPosition(pos.lat, pos.lon, pos.elev);
+      }, 1000);
     </script>
 	</body>
 </html>
